src/types/tests/snapshots/tgbot__types__tests__message__venue.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "venue": {
    "address": "venue address",
    "location": {
      "latitude": 2.0,
      "longitude": 1.0
    },
    "title": "venue title"
  }
}
