src/types/tests/snapshots/tgbot__types__tests__message__video_note.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "video_note": {
    "duration": 1234,
    "file_id": "video-note-id",
    "file_unique_id": "unique-id",
    "length": 124
  }
}
