src/types/tests/snapshots/tgbot__types__tests__message__voice-2.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "voice": {
    "duration": 123,
    "file_id": "voice-id",
    "file_unique_id": "unique-id"
  },
  "caption": "test voice caption",
  "caption_entities": [
    {
      "offset": 0,
      "length": 4,
      "type": "bold"
    }
  ]
}
